--- a/markup/email/examples/index.html
+++ b/markup/email/examples/index.html
@@ -390,7 +390,7 @@
 									<tbody>
 										<tr>
 											<td align="left" class="common-font">
-												Welcome <a href="" target="_blank" class="link">[first_name,fallback=friend</a>!
+												Welcome <a href="" target="_blank" class="link">[first_name,fallback=friend]</a>!
 											</td>
 											<td align="right" valign="bottom" nowrap="nowrap" class="common-font">
 												<webversion class="link">View online</webversion>
