Plugin updates, style tweaks, functionality tweaks

--- a/markup/email/examples/index.html
+++ b/markup/email/examples/index.html
@@ -117,8 +117,10 @@
 	<style type="text/css">
 		/* Utility Helpers */
 		
+		/* Outlook likes font properties on the element or parent */
 		.common-font {
 			font-family: Arial, Helvetica, sans-serif;
+			font-size: 14px;
 			line-height: 1.4;
 		}
 		.font-family--trebuchet {
@@ -451,7 +453,7 @@
 										<td align="left" valign="top" bgcolor="#ffffff" class="common-font">
 											<div style="font-size:24px;line-height:24px;">&nbsp;</div>
 											<div class="gray-text font-size--large">
-												Here is some content text that needs special spacing and not rely on paragraphs! <b><i>Check the code</i></b> to see how this is set up<span class="green-text">*</span>!</i></b>
+												Here is some content text that needs special spacing and not rely on paragraphs! <b><i>Check the code</i></b> to see how this is set up<span class="green-text">*</span>!
 											</div>
 											<div style="font-size:24px;line-height:24px;">&nbsp;</div>
 											<div class="gray-text font-size--small">
