Ignore node_modules, .htaccess updates, README updates and references, additional examples and functionality

--- a/markup/email/examples/index.html
+++ b/markup/email/examples/index.html
@@ -115,6 +115,21 @@
 	<![endif]-->
 	
 	<style type="text/css">
+	
+		/* Custom Resets */
+		
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6,
+		p {
+			margin: 0;
+			margin-bottom: 0;
+			padding: 0;
+		}
+		
 		/* Utility Helpers */
 		
 		/* Outlook likes font properties on the element or parent */
@@ -148,6 +163,12 @@
 		}
 		.nowrap {
 			white-space: nowrap;
+		}
+		.text-center {
+			text-align: center;
+		}
+		.vertical-align-middle {
+			vertical-align: middle;
 		}
 		
 		.display-block,
@@ -238,8 +259,7 @@
 			.flex-row {
 				margin-bottom: 15px;
 			}
-			.flex-center,
-			.text-center {
+			.flex-center {
 				text-align:center !important;
 			}
 			
@@ -300,6 +320,15 @@
 		.link {
 			color: blue;
 			text-decoration: none;
+		}
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6,
+		p {
+			margin-bottom: 1.0em;
 		}
 		
 		.h3 {
